# kiro-devsync-ai

./: .env.example  .env.test  .gitignore  CHANGELOG_CONFIGURATION_IMPLEMENTATION_SUMMARY.md  CHANGELOG_HISTORY_IMPLEMENTATION_SUMMARY.md  CONTRIBUTOR_IMPACT_ANALYZER_SUMMARY.md  DEPLOYMENT.md  Day2_Progress.md  FORMATTER_FACTORY_SUMMARY.md  JIRA_ASSIGNMENT_ANALYSIS_SUMMARY.md  NOTIFICATION_FILTER_SUMMARY.md  Procfile  README.md  SPECIALIZED_FORMATTERS_SUMMARY.md  STATUS_INDICATORS_SUMMARY.md  TESTING_REPORT.md  analytics.db  create_missing_tables.sql  debug_database.py  debug_database_fixed.py  example_configuration_usage.py  example_message_batching.py  fix_batcher.py  fix_duplicate.py  kiro_supabase_mcp_server.py  linkedin-demo.md  pyproject.toml  render-build.sh  render.yaml  requirements-core.txt  requirements-minimal.txt  requirements.txt  run_formatter_tests.py  send_dev_activity_notification.py  send_simple_notification.py  send_steering_update_notification.py  steering_update_summary.md  test_api_endpoints.py  test_assignment_analysis_simple.py  test_base_template_simple.py  (+12 more)
config/: analytics_config.example.yaml  batching_config_default.yaml  changelog_config.example.yaml  example_team_config_for_testing.yaml  jira_assignment_analysis_config.example.yaml  jira_assignment_hook_config.example.yaml  jira_webhook_config.example.yaml  notification_config.example.yaml  security_config.example.yaml  team_config_development.yaml  team_config_example.yaml  team_config_production.yaml  team_config_test.yaml  team_custom_hooks.yaml  team_engineering_hooks.yaml  team_qa_hooks.yaml  template_config.yaml  (+1 more)
(+402 files in other folders)
