[project]
name = "devsync-ai"
version = "0.1.0"
description = "Smart release coordination tool that automates communication and coordination tasks within software teams"
authors = [
    {name = "DevSync AI Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and web server
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic[email]==2.5.0",
    "pydantic-settings==2.1.0",
    # Database and caching
    "supabase==2.7.4",
    "redis==5.0.1",
    # External API clients
    "httpx>=0.24.0,<0.25.0",
    "aiohttp==3.9.1",
    # GitHub integration
    "PyGithub==2.1.1",
    # JIRA integration
    "jira==3.5.2",
    # Slack integration
    "slack-sdk==3.26.1",
    # Scheduling
    "APScheduler==3.10.4",
    # Utilities
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "aiosqlite>=0.21.0",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.11.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
